[package]
name = "learnr"
version = "0.1.0"
authors = ["Jordan Poles <jpdev.noreply@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.0.0"
dotenv = "0.15.0"
serde = "1"
serde_derive = "1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
